--- a/index.html
+++ b/index.html
@@ -39,9 +39,49 @@
       line-height: 1.6em;
     }
 
+    .click-box {
+      margin-top: 30px;
+      padding: 15px 25px;
+      border-radius: 15px;
+      background: #ff6f91;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1.1em;
+      transition: background 0.3s;
+    }
+
+    .click-box:hover {
+      background: #ff477e;
+    }
+
+    .popup {
+      display: none;
+      margin-top: 20px;
+      background: rgba(255,255,255,0.9);
+      color: #333;
+      padding: 20px;
+      border-radius: 15px;
+      animation: fadeInPopup 0.5s ease;
+    }
+
+    .popup button {
+      margin-top: 10px;
+      background: #ff6f91;
+      color: #fff;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px);}
       to { opacity: 1; transform: translateY(0);}
+    }
+
+    @keyframes fadeInPopup {
+      from { opacity: 0; transform: scale(0.9);}
+      to { opacity: 1; transform: scale(1);}
     }
   </style>
 </head>
@@ -54,6 +94,21 @@
       Today, I just want to let you know that you are truly cherished and thought of, always.  
       ❤️
     </p>
+
+    <div class="click-box" onclick="showMessage()">Click here for a surprise 💌</div>
+    <div id="popup" class="popup">
+      <p>💖 Precious, I hope this little message brings a smile to your day. You are amazing, and I think about you more than you know! 💖</p>
+      <button onclick="closeMessage()">Close</button>
+    </div>
   </div>
+
+  <script>
+    function showMessage() {
+      document.getElementById('popup').style.display = 'block';
+    }
+    function closeMessage() {
+      document.getElementById('popup').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
