--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       ❤️
     </p>
 
-    <div class="click-box" onclick="showMessage()">Click here for a surprise 💌</div>
+    <div class="click-box" onclick="showMessage()">Click Me 🥳</div>
     <div id="popup" class="popup">
       <p>💖 Precious, I hope this little message brings a smile to your day. You are amazing, and I think about you more than you know! 💖</p>
       <button onclick="closeMessage()">Close</button>
